提交上传图片

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -4,7 +4,7 @@ ftp.server.ip=10.114.73.119
 ftp.user=ftp
 ftp.pass=123456
 #ftp.server.http.prefix=http://www.lchj.test.com:8081/
-ftp.server.http.prefix=http://www.lchj.com/ftp/
+ftp.server.http.prefix=http://10.114.73.119:8087/upload/
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
