订单接口实现

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,13 +1,9 @@
-
 #ftp.server.ip=你的FTP服务器ip地址
-ftp.server.ip=10.114.73.119
+ftp.server.ip=139.9.222.156
 ftp.user=ftp
 ftp.pass=123456
-#ftp.server.http.prefix=http://www.lchj.test.com:8081/
-ftp.server.http.prefix=http://10.114.73.119:8087/upload/
-
-
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
-
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+ftp.server.http.url=http://139.9.222.156:8080/
+ftp.server.http.prefix=http://139.9.222.156:8080/mmall/upload/
+alipay.callback.url=http://139.9.222.156:8080/mmall/order/alipay_callback.do
+password.salt=geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
