--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -4,6 +4,7 @@ db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
 #db.url=jdbc:mysql: //你的数据库IP:你的数据库Port/你的database?characterEncoding=utf-8
 db.username=root
+#db.password=lchj246053
 db.password=123456
 
 
