--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -3,7 +3,8 @@ ftp.server.ip=139.9.222.156
 ftp.user=ftp
 ftp.pass=123456
 ftp.server.http.url=http://139.9.222.156:8080/
-ftp.server.http.prefix=http://139.9.222.156:8080/mmall/upload/
+ftp.server.http.prefix=http://10.114.73.119:8088/upload/
+#ftp.server.http.prefix=http://139.9.222.156:8080/mmall/upload/
 alipay.callback.url=http://139.9.222.156:8080/mmall/order/alipay_callback.do
 password.salt=geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
